server/deployment/k8s/common-library/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-library
  labels:
    app: common-library
spec:
  replicas: 2
  selector:
    matchLabels:
      app: common-library
  template:
    metadata:
      labels:
        app: common-library
    spec:
      containers:
      - name: common-library
        image: loretta-bank/common-library:latest
        ports:
        - containerPort: 8080
